kubernetes/istiod/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-essentials
  namespace: istio-system
spec:
  hosts:
  - "k8s.proxmox.homelab"
  gateways:
  - istio-system/default-gateway
  http:
  - match:
    - uri:
        prefix: /jaeger
    route:
    - destination:
        port:
          number: 16686
        host: jaeger-query.istio-system.svc.cluster.local
  - match:
    - uri:
        prefix: /kiali
    headers:
      request:
        set:
          X-Forwarded-Port: "443"
    route:
    - destination:
        port:
          number: 20001
        host: kiali.istio-system.svc.cluster.local
  - match:
    - uri:
        prefix: /prometheus/
    - uri:
        prefix: /prometheus
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 9090
        host: monitoring-kube-prometheus-prometheus.istio-system.svc.cluster.local
  - match:
    - uri:
        prefix: /grafana
    route:
    - destination:
        port:
          number: 80
        host: monitoring-grafana.istio-system.svc.cluster.local
